fix: update search margin for improved layout spacing

--- a/src/scss/_ressponsive.scss
+++ b/src/scss/_ressponsive.scss
@@ -50,7 +50,7 @@
     .search {
         max-width: 366px;
         // padding: 0 1rem;
-        margin: 1rem auto 0;
+        margin: 1rem auto 2rem;
         box-sizing: border-box;
         align-items: center;
     }
@@ -60,7 +60,7 @@
         align-items: center;
         flex-direction: column;
         // gap: 1rem;
-        margin-top: 2rem;
+        // margin-top: 2rem;
         padding: 0 2rem;
         justify-content: center;
 
