--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -244,7 +244,7 @@ body {
   }
   .search {
     max-width: 366px;
-    margin: 1rem auto 0;
+    margin: 1rem auto 2rem;
     box-sizing: border-box;
     align-items: center;
   }
@@ -252,7 +252,6 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 2rem;
     padding: 0 2rem;
     justify-content: center;
   }
